Apply checkstyle fixes, update configuration spec